# hohmann-atlas

./: .gitignore  CLAUDE.md  README.md  future.md
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml
backend/: .dockerignore  Dockerfile  generate_test_fixtures.py  pyproject.toml
backend/app/: api.py  cli.py  models.py  server.py
backend/app/engine/: bodies.py  cache.py  generate_cache.py  generate_planets.py  hohmann.py  launch.py  tour.py
backend/app/engine/data/: windows.json
backend/tests/: .generate_cache_hash  .generate_planets_hash  conftest.py  test_api.py  test_bodies.py  test_cli.py  test_e2e_arc_alignment.py  test_e2e_selection.py  test_generate_planets.py  test_generate_windows.py  test_hohmann.py  test_launch.py  test_tour.py  test_window_cache.py
engine/: README.md  generate_test_fixtures.py
engine/app/: cli.py
engine/app/engine/: ephemeris.py  generate_cache.py  generate_planets.py  launch.py  tour.py  windows.py
engine/tests/: .generate_cache_hash  test_ephemeris.py  test_generate_planets.py  test_generate_windows.py  test_tour.py  test_tour_mocked.py  test_windows.py
frontend/: README.md  atlas.js  atlas.test.js  cache.js  cache.test.js  debug.js  index.html  orbit.js  orbit.test.js  positions.js  positions.test.js  tour.js  tour.test.js
frontend/data/: planets.json
frontend/test-fixtures/: positions.json  tours.json  windows.json
infra/: map-credentials.sh  setup.sh
