[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hohmann-atlas"
version = "0.1.0"
description = "Planetary-tour mission planner using real orbital mechanics"
requires-python = ">=3.11"
dependencies = [
    "astropy>=6.0",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pytest-playwright>=0.7"]

[project.scripts]
hohmann-atlas = "app.cli:main"
hohmann-serve = "app.server:run"

[tool.pytest.ini_options]
markers = [
    "slow: slow tests that compute orbital windows (run with: pytest -m slow)",
    "e2e: end-to-end browser tests requiring Playwright (run with: pytest -m e2e)",
]
addopts = "-m 'not slow and not e2e'"

[tool.setuptools.package-data]
"app.engine" = ["data/*.json"]
